# brainfuck_interpreter_8bit

./: .gitignore  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
examples/: hello.rs
examples/hello_world/: Cargo.toml
examples/hello_world/src/: main.rs
examples/ignore-input-error/: Cargo.toml
examples/ignore-input-error/src/: main.rs
src/: error.rs  lib.rs  unit.rs
