[package]
name = "brainfuck_interpreter"
version = "0.1.0"
edition = "2021"
authors = ["BryantTseng"]
homepage = "https://github.com/BryantTseng/brainfuck_interpreter"
repository = "https://github.com/BryantTseng/brainfuck_interpreter"
description = "brainfuck interpreter written in Rust"
license-file = "LICENSE"
readme = "README.md"
keywords = ["brainfuck"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[features]
ignore-input-error = []